[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = {version = "1.0.140", features = ["std"]}
tokio = {version = "1.45.1", features = ["full"]}
tokio-tungstenite = "0.26.2"
rand = "0.9.1"
tungstenite = "0.26.2"
url = "2.5.4"
websocket = "0.27.1"
zerocopy = "0.8.26"
